syntax = "proto3";

package stats.message;

option java_multiple_files = true;
option java_package = "ru.practicum.ewm.stats.grpc";

message SimilarEventsRequestProto {
  int64 event_id = 1;
  int64 user_id = 2;
  int32 max_results = 3;
}
