syntax = "proto3";

package stats.service.dashboard;

option java_multiple_files = true;
option java_package = "stats.service.dashboard";

import "messages/user_prediction_request.proto";
import "messages/recommended_event.proto";
import "messages/similar_events_request.proto";
import "messages/interactions_count_request.proto";

service RecommendationsController {
  rpc GetRecommendationsForUser (stats.message.UserPredictionsRequestProto) returns (stream stats.message.RecommendedEventProto);

  rpc GetSimilarEvents (stats.message.SimilarEventsRequestProto) returns (stream stats.message.RecommendedEventProto);

  rpc GetInteractionsCount (stats.message.InteractionsCountRequestProto) returns (stream stats.message.RecommendedEventProto);
}
